--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
              <form class="ps-lg-5"><a class="btn btn-primary order-1 order-lg-0" href="intro.html"> Hướng Dẫn Sử Dụng </a></form>
           
             </ul>
-            <form class="ps-lg-5"><a class="btn btn-primary order-1 order-lg-0" href="intro.html"> Download </a></form>
+            <form class="ps-lg-5"><a class="btn btn-primary order-1 order-lg-0" href="https://github.com/AnhHa03/Music_Player"> Download </a></form>
           </div>
         </div>
       </nav>
